--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,8 @@ table, th, td {
 	<iframe width="400" height="200" src="https://www.youtube.com/embed/VOsSkbfbME0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3> Thank You!</h3>
 
-    <a href="file:///C:/Users/varni/Desktop/atom/Hey%20There!.html"/>Take me back</a>
+    <a href="Index.html"/>Take me back</a>
 
      
 </body>	
+</html>
